welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: type mismatch;
 found   : Int(0)
 required: Array[Int]
	var nums:Array[Int]=0
                            ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
}
^indexOfValue:4: error: not found: value nums
	for (i<-0 to nums.length-1){
                     ^